--- a/funny/pe/pay.html
+++ b/funny/pe/pay.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=1280,user-scalable=no,target-densitydpi=device-dpi" />
+    <meta name="viewport" content="width=300,user-scalable=no,target-densitydpi=device-dpi" />
     <title>滑稽币--py交易</title>
     <link rel="bookmark" type="image/x-icon" href="favicon.ico"/>
     <link rel="shortcut icon" href="favicon.ico">
@@ -13,7 +13,7 @@
   </head>
   <body>
     <iframe name="formsubmit" style="display:none;"></iframe>
-    <div class="funny" id="py" style="position:static;margin:10px 0 250px 10px;height:350px;">
+    <div class="funny" id="py" style="position:static;margin:10px 0 250px 10px;height:250px;">
       <div class="title"><img src="/img/19.png">支付凭证</div>
       <a href="py.html"><div class="pay">收款</div></a>
       <div class="inputa" style="margin:10px 0 0 15px;height:80px;">
@@ -36,7 +36,7 @@
       <ul>
         <a href="index.html"><li><img id="rearchImg" src="/img/19.png"></li></a>
         <li><img src="/img/27.png"></a></li>
-        <a href="/homePage/pc"><li>◯</li></a>
+        <a href="/homePage/pe"><li>◯</li></a>
         <a href="add.html"><li><img id="rearchImg" src="/img/25.png"></li></a>
         <a href="my.html"><li><img id="rearchImg" src="/img/26.png"></li></a>
       </ul>
