--- a/funny/pe/py.html
+++ b/funny/pe/py.html
@@ -30,7 +30,7 @@
       <ul>
         <a href="index.html"><li><img id="rearchImg" src="/img/19.png"></li></a>
         <li><img src="/img/27.png"></a></li>
-        <a href="/homePage/pc"><li>◯</li></a>
+        <a href="/homePage/pe"><li>◯</li></a>
         <a href="add.html"><li><img id="rearchImg" src="/img/25.png"></li></a>
         <a href="my.html"><li><img id="rearchImg" src="/img/26.png"></li></a>
       </ul>
